# pulugu

./: .gitignore  Makefile  cabal.project  pulugu.cabal  shell.nix
etc/: init.mk  nix.mk
nix/: nix.json
