cabal-version:      3.0
name:               pulugu
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             delivery group | earnestresearch.com
maintainer:         metaml@gmail.com
category:           simple
extra-source-files: CHANGELOG.md

common defs
  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , BlockArguments
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveFunctor
                    , DeriveGeneric
                    , DerivingStrategies
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , PolyKinds
                    , OverloadedStrings
                    , RankNTypes
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeApplications
                    , TypeOperators
                    , TypeFamilies

common deps
  build-depends: base
               , aeson
               , binary
               , bytestring
               , case-insensitive
               , containers
               , either
               , errors
               , free
               , generic-lens
               , selective
               , split
               , text
               , text-conversions
               , text-show
               , transformers-either
               , unordered-containers
common opts
  ghc-options: -O2
               -Wall
               -Wcompat
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wpartial-fields
               -Wredundant-constraints
               -flate-specialise
               -fno-warn-type-defaults
               -fprint-potential-instances
               -fspecialise-aggressively

library
  import: defs, deps, opts
  exposed-modules:
  other-modules:
  hs-source-dirs: src

executable pulugu
  import: defs, deps, opts
  main-is: pulugu.hs
  hs-source-dirs: app
  build-depends: pulugu
